fix: overflow blogslug title -> scroll

--- a/src/styles/PostsSlug.module.css
+++ b/src/styles/PostsSlug.module.css
@@ -44,7 +44,15 @@
     font-weight: 600;
     margin-top: 5px;
     margin-bottom: 10px;
+    overflow: scroll;
+    -ms-overflow-style: none; /* 인터넷 익스플로러 */
+    scrollbar-width: none; /* 파이어폭스 */
 }
+
+.title::-webkit-scrollbar {
+    display: none; /* 크롬, 사파리, 오페라, 엣지 */
+}
+
 
 .description {
     font-size: 20px;
